syntax = "proto3";
option go_package = "github.com/radek-ryckowski/ssdc/proto/cache;cache";

package cache;

import "google/protobuf/any.proto";

service CacheService {
  rpc Set(SetRequest) returns (SetResponse);
  rpc Get(GetRequest) returns (GetResponse);
}

message SetRequest {
  string uuid = 1;
  google.protobuf.Any value = 2;
  bool local = 3;
  int32 quorum = 4;
}

message SetResponse {
  bool success = 1;
  int32 consistent_nodes = 2;
}

message GetRequest {
  string uuid = 1;
}

message GetResponse {
  google.protobuf.Any value = 1;
  bool found = 2;
}

message KeyValue {
  bytes key = 1;
  bytes value = 2;
}